<resources>
    <string name="valodik">Lesosn1</string>

    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="age">Age</string>
    <string name="remember">Remember</string>
    <string name="logout">Logout</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="armenian">Armenian</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="error">Invalid login or password</string>


</resources>
